Bug 358233 - Reply-To is missing in compose message window
Summary: Reply-To is missing in compose message window
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 5.4.0
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-20 00:47 UTC by sedrubal
Modified: 2018-10-29 22:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sedrubal 2016-01-20 00:47:46 UTC
I can-t find a "reply-to" field in compose messages window. I think this should be added to the dropdown where you can select "To", "CC" and "BCC".

Reproducible: Always
Comment 1 sedrubal 2016-02-23 22:48:30 UTC
:+1: (I think this will not be much work to implement, but many users will be happy ;) )
Comment 2 Laurent Montel 2016-02-24 05:59:09 UTC
Composer->menu view -> "Reply to" is not enough ?
Comment 3 sedrubal 2016-02-24 07:20:56 UTC
Wow I've never opened this menu O.o

But I think the most users will expect 'From' and 'Reply To' in the dropdown where you can select 'To', 'CC' and 'BCC'.
Comment 4 Laurent Montel 2016-02-24 08:00:00 UTC
So you can write several "From" and severy "Reply-to" it's not logical :)
So 1 item for each is enough :)
Comment 5 sedrubal 2016-02-24 08:09:47 UTC
Ah I see. Then the items would have to be removed from the drop down, after they are set (that's ugly....)

But as I can read it in (german) wikipedia [1] there can be several comma separated reply-to addresses (in english wikipedia this information is missing). So this might only be logical for reply to...

[1] https://de.wikipedia.org/wiki/Header_%28E-Mail%29#Reply-To:_Antwortadresse
Comment 6 Denis Kurz 2017-01-13 19:38:35 UTC
According to RFC 5322, section 3.6.2, the Reply-To header indeed contains an "address-list". It should be specified in the composer like any other address-list too, instead of an actual comma-separated list in the existing Reply-To text field.
Comment 7 Laurent Montel 2018-10-29 06:12:35 UTC
Git commit 7839b25f3c897e8b39ae23295f2a409819193624 by Laurent Montel.
Committed on 29/10/2018 at 06:11.
Pushed by mlaurent into branch 'master'.

Start to implement Reply-Ro

M  +6    -1    messagecomposer/src/recipient/recipient.cpp
M  +1    -1    messagecomposer/src/recipient/recipient.h

https://commits.kde.org/messagelib/7839b25f3c897e8b39ae23295f2a409819193624
Comment 8 Laurent Montel 2018-10-29 22:02:11 UTC
Git commit 942a637d26928cf5f5e5fdfbd15affa76714c4f1 by Laurent Montel.
Committed on 29/10/2018 at 22:01.
Pushed by mlaurent into branch 'master'.

Fix Bug 358233 - Reply-To is missing in compose message window

FIXED-IN: 5.10.0

M  +1    -7    CMakeLists.txt
M  +1    -36   messagecomposer/src/composer/composerviewbase.cpp
M  +3    -3    messagecomposer/src/composer/composerviewbase.h
M  +0    -1    messagecomposer/src/config-messagecomposer.h.cmake
M  +0    -3    messagecomposer/src/recipient/recipient.cpp
M  +5    -1    messagecomposer/src/recipient/recipientseditor.cpp
M  +0    -13   messagecomposer/src/recipient/recipientspicker.cpp
M  +0    -3    messagecomposer/src/recipient/recipientspicker.h

https://commits.kde.org/messagelib/942a637d26928cf5f5e5fdfbd15affa76714c4f1