Fix Bug 358233 - Reply-To is missing in compose message window

FIXED-IN: 5.10.0
BUG: 358233