messagecomposer/src/recipient/recipient.cpp
@@ -23,7 +23,6 @@
 */
 
 #include "recipient.h"
-#include "config-messagecomposer.h"
 
 #include <KLocalizedString>
 
@@ -136,9 +135,7 @@ QStringList Recipient::allTypeLabels()
     types.append(typeLabel(To));
     types.append(typeLabel(Cc));
     types.append(typeLabel(Bcc));
-#ifdef IMPLEMENT_REPLY_TO_SUPPORT_RECIPIENT
     types.append(typeLabel(ReplyTo));
-#endif
     return types;
 }
 
