messagecomposer/src/recipient/recipientspicker.h
@@ -22,7 +22,6 @@
 #define MESSAGECOMPOSER_RECIPIENTSPICKER_H
 
 #include <MessageComposer/Recipient>
-#include "config-messagecomposer.h"
 
 #include <kcontacts/addressee.h>
 #include <QDialog>
@@ -74,9 +73,7 @@ private:
     KLDAP::LdapSearchDialog *mLdapSearchDialog = nullptr;
 
     Recipient::Type mDefaultType;
-#ifdef IMPLEMENT_REPLY_TO_SUPPORT_RECIPIENT
     QPushButton *mUser4Button = nullptr;
-#endif
     QPushButton *mUser3Button = nullptr;
     QPushButton *mUser2Button = nullptr;
     QPushButton *mUser1Button = nullptr;
